Kubernetes/Demo/k8-master01/k8s/demo/kubernetes/yamls/ingress-demo/traefik/tls-ingress-routes/1-tlsroute-development.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: development
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.example.com`)
      kind: Rule
      services:
        - name: nginx-deploy-main
          port: 80
  tls:
    certResolver: pebble
